--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
     <section>
         <div class="image-container d-block d-sm-none">
-            <img src="images/about.jpg" alt="The Twelfth House Astrologer Headshot">
+            <img src="images/About.jpg" alt="The Twelfth House Astrologer Headshot">
             <h1 class="overlay-text">The 12th House Astrologer</h1>
         </div>
     </section>
     <section>
         <div class="image-container-2 container-fluid d-none d-sm-block">
-            <img src="images/about.jpg" alt="The Twelfth House Astrologer Headshot">
+            <img src="images/About.jpg" alt="The Twelfth House Astrologer Headshot">
         </div>
     </section>
     <section class="introduction">
