--- a/free-consultation/12th-house-planets/do-you-have-12th-house-planets.html
+++ b/free-consultation/12th-house-planets/do-you-have-12th-house-planets.html
@@ -81,7 +81,7 @@
                         <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
+                        <a class="nav-link" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../readings/readings.html">Readings</a>
