--- a/free-consultation/form/free-consultation-form.html
+++ b/free-consultation/form/free-consultation-form.html
@@ -81,13 +81,14 @@
                         <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
+                        <a class="nav-link" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
+                        <a class="nav-link active free-consult"
+                            href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
