--- a/readings/relationship/relationship-report.html
+++ b/readings/relationship/relationship-report.html
@@ -81,10 +81,10 @@
                         <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
+                        <a class="nav-link" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
+                        <a class="nav-link active" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
