--- a/the-12th-house/understanding/understanding-the-12th-house.html
+++ b/the-12th-house/understanding/understanding-the-12th-house.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" aria-current="page" href="../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             The 12th House
                         </a>
@@ -81,7 +81,7 @@
                         <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
+                        <a class="nav-link" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../readings/readings.html">Readings</a>
