Fixed image path

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 Although I specialize in charts with a twelfth house focus, my readings are not limited to specific
                 placements or clientele. <em>Helping my clients use astrology to improve their lives and relationships
                     is
-                    at the heart of my practice.</em> I like to think of the natal chart as a lens: it provides a unique
+                    at the heart of my business.</em> I like to think of the natal chart as a lens: it provides a unique
                 perspective that can help you see yourself in a new way. When I draw up a chart, one of the first things
                 I look for are areas of conflict between elements and planets with contradictory meanings. Often the key
                 to growth is understanding these conflicts and noticing when we act them out with other people instead
