--- a/readings/relationship/relationship-report.html
+++ b/readings/relationship/relationship-report.html
@@ -113,7 +113,7 @@
             </div>
             <div class="birth-chart-details  col-lg-7">
                 <h2><strong>1&rpar; Synastry</strong></h2>
-                <p>First, I will analyze basic compatibility between charts. Do you personalities clash? Is there great
+                <p>First, I will analyze basic compatibility between charts. Do your personalities clash? Is there great
                     romantic chemistry but poor emotional chemistry? Do you share similar values? It tells us how well
                     person A gets along with person B.</p>
                 <h2><strong>2&rpar; Composite Chart</strong></h2>
