--- a/the-12th-house/sun/sun-in-the-12th-house.html
+++ b/the-12th-house/sun/sun-in-the-12th-house.html
@@ -110,16 +110,16 @@
             that they feel lost and confused. They struggle to know who they are because their sense of identity changes
             depending on who or what they are around.</p>
         <p>The twelfth house governs what remains when the concerns of the outer world are stripped away. Confinement to
-            monasteries, asylums, prisons, and hospitals serves to direct attention away from wordly cares into the
+            monasteries, asylums, prisons, and hospitals serves to direct attention away from worldly cares into the
             subtle gradations of inner experience that only become perceptible in isolation. It is in these quiet
             moments that twelfth house suns come to know themselves.</p>
         <h2>Why is this placement so challenging?</h2>
-        <p>People withe twelfth house suns are faced with a cirsis of identity. The sun, which governs the conscious,
-            rational aspects of the personality, falls in the house that governs unsconsiousness, irrationality, and
+        <p>People with twelfth house suns are faced with a crisis of identity. The sun, which governs the conscious,
+            rational aspects of the personality, falls in the house that governs unconsciousness, irrationality, and
             intangibility. The conscious center of the personality is unusually receptive to unconscious information,
             which is experienced in the form of abstract impressions, intuitions, reveries, and dreams. People with sun
             in the twelfth house may feel as though they are constantly moving through a strange dream that shifts and
-            changes depending on their environment. Making sense of this information can be increadibbly challenging,
+            changes depending on their environment. Making sense of this information can be incredibly challenging,
             and it begs the question: how can I define myself as an individual while remaining receptive to the
             overwhelming unconscious information that I am constantly taking in?</p>
         <p>It becomes necessary for people with this placement to discover what remains constant within them. They may
@@ -162,7 +162,7 @@
                 primitive urges, he could have sensed and avoided his unfortunate fate. This story itself is a brutal
                 one, but as a metaphor, it touches on something true and useful: learn to see the connection between
                 yourself and the world around you, in all of its apparent savagery, brutality, strangeness, and mystery,
-                or perish on the alter of the "false self."</p>
+                or perish on the altar of the "false self."</p>
     </section>
 
     <section class="do-you-have container-fluid">
