--- a/the-12th-house/understanding/understanding-the-12th-house.html
+++ b/the-12th-house/understanding/understanding-the-12th-house.html
@@ -99,8 +99,8 @@
         <h1>Understanding the 12th House</h1>
         <p class="date"><em>October 4, 2022</em></p>
         <p>The twelfth house rules secrets, hidden enemies, self-undoing, and places of confinement such as hospitals,
-            mental institutions, monastaries, and prisons. It is associated with the part of the human psyche where
-            reason breaks down and the strange metaphorical language of the subconscious mind reins supreme. It is the
+            mental institutions, monasteries, and prisons. It is associated with the part of the human psyche where
+            reason breaks down and the strange metaphorical language of the subconscious mind reigns supreme. It is the
             realm of dreams and archetypes, the seat of the arcane, and a home to witches and wizards, martyrs and
             saints, the scapegoats of society, and the ghosts of the collective unconscious. Those who lose their way in
             this obscure, subliminal wasteland are overtaken by confusion, insanity, and loss of personal agency.</p>
@@ -109,9 +109,9 @@
             house that brings misery and restriction to people with one or more planets there. Some modern astrologers
             prefer to interpret astrological charts through the lens of depth psychology. <em>Astrological placements
                 are seen not as a life sentence, but rather potentials that contain both positive and negative
-                atributes, and can be mastered with effort and awareness.</em></p>
+                attributes, and can be mastered with effort and awareness.</em></p>
         <p>Although the twelfth house can bring misery and suffering, it is also a hidden entrance to a deeply
-            meaningful and fulfiilling life. If you put in the work to get in touch with the planets in your twelfth
+            meaningful and fulfilling life. If you put in the work to get in touch with the planets in your twelfth
             house, you may discover hidden dimensions to your personality that bear immense potential. <em>The real
                 tragedy of the twelfth house is that people often overlook their own talents because they believe them
                 to be built upon mere fantasies or impossible dreams.</em>They will find a thousand reasons to dismiss
@@ -120,7 +120,7 @@
             he will discover that his dream is only a dream--that he lacks the talent, or that circumstances will
             prevent him from succeeding, and that the painful sense of longing he feels toward not being able to realize
             his dream will find concrete form. Ironically, the emotion he so desperately wishes to avoid is the grief of
-            unlived potential, which if avoided, becomes a self-fulfilling prophesy.</p>
+            unlived potential, which if avoided, becomes a self-fulfilling prophecy.</p>
         <p>A little awareness goes a long way with the twelfth house because its misfortunes are usually self-inflicted.
             What is avoided, rejected, or disowned in ourselves will pursue us in the form of frightening, upsetting, or
             even destabilizing emotions that, if ignored, will manifest concretely, amplifying these feelings in an
