fixed broken links

--- a/index.html
+++ b/index.html
@@ -60,23 +60,20 @@
                             General Astrology
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item"
-                                    href="general-astrology/sun-signs/the-sun-in-the-signs.html">The
+                            <li><a class="dropdown-item" href="#">The
                                     Sun
                                     in the Signs</a></li>
-                            <li><a class="dropdown-item"
-                                    href="general-astrology/sun-houses/the-sun-in-the-houses.html">The
+                            <li><a class="dropdown-item" href="#">The
                                     Sun
                                     in the Houses</a>
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="general-astrology/moon-signs/the-moon-in-the-signs.html">The
+                            <li><a class="dropdown-item" href="#">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="research/research.html">Research</a>
+                        <a class="nav-link" href="#">Research</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="articles/articles.html">Articles</a>
